# django-next-starter

./: README.md
backend/: .env.example  .gitignore  manage.py  pyproject.toml  requirements.txt
backend/authentication/: urls.py  views.py
backend/core/: urls.py
backend/core/settings/: base.py  dev.py  prod.py
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/components/: Container.tsx  GenericHead.tsx  Navbar.tsx  SignInDrawer.tsx  SignInForm.tsx  ThemeChanger.tsx  UserDetails.tsx
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx  profile.tsx
frontend/src/pages/api/auth/: [...nextauth].js
frontend/src/pages/auth/: sign-in.tsx
frontend/src/styles/: globals.css
frontend/types/: next-auth.d.ts
